# raylib_cpp_cmake

./: .gitignore  CMakeLists.txt  Makefile
cmake/: FindGTest.cmake  FindRaylib.cmake
src/: Window.cpp  Window.hpp  main.cpp
tests/: CMakeLists.txt  snake_test.cpp
